--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               >
             </li>
             <li class="page__menu-item">
-              <a href="#" class="page__menu-link active"
+              <a href="#" class="page__menu-link page__menu-link--active"
                 ><img
                   src="./img/menu/geo.svg"
                   alt="IMG"
@@ -82,6 +82,42 @@
             <span class="page__menu-lable">Скрыть меню</span>
           </button>
         </nav>
+        <div class="page__content">
+          <div class="page__loc">
+            <h1 class="page__loc-title">Лоуации/Все локации</h1>
+            <ul class="page__loc-list">
+              <li class="page__loc-item">
+                <a href="#" class="page__loc-link page__loc-link--active"
+                  >Все локации</a
+                >
+              </li>
+              <li class="page__loc-item">
+                <a href="#" class="page__loc-link">Импорт/Экспорт</a>
+              </li>
+              <li class="page__loc-item">
+                <a href="#" class="page__loc-link">Настройки</a>
+              </li>
+            </ul>
+            <button class="page__loc-btn batton">
+              <img
+                src="./img/plus.svg"
+                alt="IMD"
+                class="page__loc-img page__loc-img--plus"
+              />
+              <span class="page__loc-lable">Добавить локацию</span>
+            </button>
+          </div>
+          <div class="page__sync">
+            <batton class="batton batton--sync page__sync-batton">
+              <img
+                src="./img/update.svg"
+                alt="IMD"
+                class="batton__img batton__img--update"
+              /><span class="batton__lable">Синхронизировать</span>
+              <span class="batton__date">(17.05.2024 15:23:21)</span>
+            </batton>
+          </div>
+        </div>
       </main>
     </div>
     <script src="./js/script.js"></script>
