--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
               /><span class="batton__lable">Синхронизировать</span>
               <span class="batton__date">(17.05.2024 15:23:21)</span>
             </batton>
+            <div class="page__sync-search">
+              <input
+                type="checkbox"
+                checked
+                class="page__sync-checkbox checkbox"
+              />
+              <label for="checkbox" class="page__sync-lable"
+                >Показывать только активные</label
+              >
+              <input
+                type="search"
+                class="page__sync-search-input"
+                placeholder="Поиск"
+              />
+            </div>
           </div>
         </div>
       </main>
