--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             class="logo__img--version"
           />
         </div>
+        <img src="./img/exit.svg" alt="exit" class="header__exit" />
       </header>
       <main class="page">
         <nav class="page_menu">
@@ -104,7 +105,7 @@
                 alt="IMD"
                 class="page__loc-img page__loc-img--plus"
               />
-              <span class="page__loc-lable">Добавить локацию</span>
+              <span class="page__loc-lable batton__lable">Создать локацию</span>
             </button>
           </div>
           <div class="page__sync">
