--- a/html/options.html
+++ b/html/options.html
@@ -127,6 +127,37 @@
             </ul>
             <section class="page__table">
               <h1 class="page__table-title">Настройка полей таблицы</h1>
+              <table class="page__table-container">
+                <tr class="page__table-row"></tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th page__table-th--big">Название</th>
+                  <th class="page__table-th">Описание</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Цена</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">МОЛ</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Фото</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Цвет</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Локация</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Количество</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Описание</th>
+                </tr>
+                <tr class="page__table-row">
+                  <th class="page__table-th">Количество</th>
+                </tr>
+              </table>
             </section>
           </section>
         </div>
